updated code to download files from vector-recipes

--- a/examples/Speaker_Mapped_Transcription/Speaker_Mapping.ipynb
+++ b/examples/Speaker_Mapped_Transcription/Speaker_Mapping.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -4804,8 +4803,7 @@
           }
         }
       }
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -5495,8 +5493,8 @@
         "    \"input_audio_shresth.m4a\"  # Add more files as needed\n",
         "]\n",
         "\n",
-        "# Base URL for the raw files on GitHub\n",
-        "base_url = \"https://raw.githubusercontent.com/shuklaji28/vectordb-recipes/main/examples/Speaker_Mapped_Transcription/Data/\"\n",
+        "# Base URL for the raw files on GitHub. We are downloading this from LanceDB's Vector Recipes repo.\n",
+        "base_url = \"https://raw.githubusercontent.com/vectordb-recipes/main/examples/Speaker_Mapped_Transcription/Data/\"\n",
         "\n",
         "# Create a directory to store the files\n",
         "os.makedirs(\"audio_files\", exist_ok=True)\n",
@@ -5507,17 +5505,26 @@
         "    output_path = f\"audio_files/{file}\"\n",
         "    os.system(f\"wget -q {file_url} -O {output_path}\")\n",
         "    print(f\"Downloaded: {file}\")\n",
+        "print(\"All files downloaded successfully!\")\n",
         "\n",
-        "print(\"All audio files downloaded successfully!\")\n"
+        "# Base URL for the raw files on GitHub.\n",
+        "base_url = \"https://raw.githubusercontent.com/vectordb-recipes/main/examples/Speaker_Mapped_Transcription/\"\n",
+        "lang_json_file = \"languages_pair.json\"\n",
+        "lang_file_path = base_url+lang_json_file\n",
+        "output_path = \"languages_pair.json\"\n",
+        "os.system(f\"wget -q {lang_file_path} -O {output_path}\")\n",
+        "print(f\"Downloaded: {lang_json_file}\")\n",
+        "#downloading language json pair used in whisper transcription\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xUbTvDbqhtwp",
-        "outputId": "a93d19b1-b940-4d1f-e8a5-aae1bbcdedf9"
+        "outputId": "19b26ea3-129e-4a8a-9ca7-20f00d6619a6"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -5526,10 +5533,28 @@
             "Downloaded: input_audio_arjun.mp3\n",
             "Downloaded: input_audio_hamdeep.m4a\n",
             "Downloaded: input_audio_shresth.m4a\n",
-            "All audio files downloaded successfully!\n"
+            "All files downloaded successfully!\n",
+            "Downloaded: languages_pair.json\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "\n",
+        "# Load the JSON file\n",
+        "with open(\"languages_pair.json\", \"r\") as f:\n",
+        "    data = json.load(f)\n",
+        "\n",
+        "#these dictionaries are used later in helper functions.\n"
+      ],
+      "metadata": {
+        "id": "im77vxBa5HU-"
+      },
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -6308,124 +6333,13 @@
         "    \"sl\",\n",
         "]\n",
         "\n",
-        "LANGUAGES = {\n",
-        "    \"en\": \"english\",\n",
-        "    \"zh\": \"chinese\",\n",
-        "    \"de\": \"german\",\n",
-        "    \"es\": \"spanish\",\n",
-        "    \"ru\": \"russian\",\n",
-        "    \"ko\": \"korean\",\n",
-        "    \"fr\": \"french\",\n",
-        "    \"ja\": \"japanese\",\n",
-        "    \"pt\": \"portuguese\",\n",
-        "    \"tr\": \"turkish\",\n",
-        "    \"pl\": \"polish\",\n",
-        "    \"ca\": \"catalan\",\n",
-        "    \"nl\": \"dutch\",\n",
-        "    \"ar\": \"arabic\",\n",
-        "    \"sv\": \"swedish\",\n",
-        "    \"it\": \"italian\",\n",
-        "    \"id\": \"indonesian\",\n",
-        "    \"hi\": \"hindi\",\n",
-        "    \"fi\": \"finnish\",\n",
-        "    \"vi\": \"vietnamese\",\n",
-        "    \"he\": \"hebrew\",\n",
-        "    \"uk\": \"ukrainian\",\n",
-        "    \"el\": \"greek\",\n",
-        "    \"ms\": \"malay\",\n",
-        "    \"cs\": \"czech\",\n",
-        "    \"ro\": \"romanian\",\n",
-        "    \"da\": \"danish\",\n",
-        "    \"hu\": \"hungarian\",\n",
-        "    \"ta\": \"tamil\",\n",
-        "    \"no\": \"norwegian\",\n",
-        "    \"th\": \"thai\",\n",
-        "    \"ur\": \"urdu\",\n",
-        "    \"hr\": \"croatian\",\n",
-        "    \"bg\": \"bulgarian\",\n",
-        "    \"lt\": \"lithuanian\",\n",
-        "    \"la\": \"latin\",\n",
-        "    \"mi\": \"maori\",\n",
-        "    \"ml\": \"malayalam\",\n",
-        "    \"cy\": \"welsh\",\n",
-        "    \"sk\": \"slovak\",\n",
-        "    \"te\": \"telugu\",\n",
-        "    \"fa\": \"persian\",\n",
-        "    \"lv\": \"latvian\",\n",
-        "    \"bn\": \"bengali\",\n",
-        "    \"sr\": \"serbian\",\n",
-        "    \"az\": \"azerbaijani\",\n",
-        "    \"sl\": \"slovenian\",\n",
-        "    \"kn\": \"kannada\",\n",
-        "    \"et\": \"estonian\",\n",
-        "    \"mk\": \"macedonian\",\n",
-        "    \"br\": \"breton\",\n",
-        "    \"eu\": \"basque\",\n",
-        "    \"is\": \"icelandic\",\n",
-        "    \"hy\": \"armenian\",\n",
-        "    \"ne\": \"nepali\",\n",
-        "    \"mn\": \"mongolian\",\n",
-        "    \"bs\": \"bosnian\",\n",
-        "    \"kk\": \"kazakh\",\n",
-        "    \"sq\": \"albanian\",\n",
-        "    \"sw\": \"swahili\",\n",
-        "    \"gl\": \"galician\",\n",
-        "    \"mr\": \"marathi\",\n",
-        "    \"pa\": \"punjabi\",\n",
-        "    \"si\": \"sinhala\",\n",
-        "    \"km\": \"khmer\",\n",
-        "    \"sn\": \"shona\",\n",
-        "    \"yo\": \"yoruba\",\n",
-        "    \"so\": \"somali\",\n",
-        "    \"af\": \"afrikaans\",\n",
-        "    \"oc\": \"occitan\",\n",
-        "    \"ka\": \"georgian\",\n",
-        "    \"be\": \"belarusian\",\n",
-        "    \"tg\": \"tajik\",\n",
-        "    \"sd\": \"sindhi\",\n",
-        "    \"gu\": \"gujarati\",\n",
-        "    \"am\": \"amharic\",\n",
-        "    \"yi\": \"yiddish\",\n",
-        "    \"lo\": \"lao\",\n",
-        "    \"uz\": \"uzbek\",\n",
-        "    \"fo\": \"faroese\",\n",
-        "    \"ht\": \"haitian creole\",\n",
-        "    \"ps\": \"pashto\",\n",
-        "    \"tk\": \"turkmen\",\n",
-        "    \"nn\": \"nynorsk\",\n",
-        "    \"mt\": \"maltese\",\n",
-        "    \"sa\": \"sanskrit\",\n",
-        "    \"lb\": \"luxembourgish\",\n",
-        "    \"my\": \"myanmar\",\n",
-        "    \"bo\": \"tibetan\",\n",
-        "    \"tl\": \"tagalog\",\n",
-        "    \"mg\": \"malagasy\",\n",
-        "    \"as\": \"assamese\",\n",
-        "    \"tt\": \"tatar\",\n",
-        "    \"haw\": \"hawaiian\",\n",
-        "    \"ln\": \"lingala\",\n",
-        "    \"ha\": \"hausa\",\n",
-        "    \"ba\": \"bashkir\",\n",
-        "    \"jw\": \"javanese\",\n",
-        "    \"su\": \"sundanese\",\n",
-        "    \"yue\": \"cantonese\",\n",
-        "}\n",
+        "# Extract dictionaries\n",
+        "LANGUAGES = data[\"LANGUAGES\"]\n",
+        "# print(LANGUAGES)\n",
         "\n",
-        "# language code lookup by name, with a few language aliases\n",
-        "TO_LANGUAGE_CODE = {\n",
-        "    **{language: code for code, language in LANGUAGES.items()},\n",
-        "    \"burmese\": \"my\",\n",
-        "    \"valencian\": \"ca\",\n",
-        "    \"flemish\": \"nl\",\n",
-        "    \"haitian\": \"ht\",\n",
-        "    \"letzeburgesch\": \"lb\",\n",
-        "    \"pushto\": \"ps\",\n",
-        "    \"panjabi\": \"pa\",\n",
-        "    \"moldavian\": \"ro\",\n",
-        "    \"moldovan\": \"ro\",\n",
-        "    \"sinhalese\": \"si\",\n",
-        "    \"castilian\": \"es\",\n",
-        "}\n",
+        "\n",
+        "TO_LANGUAGE_CODE = data[\"TO_LANGUAGE_CODE\"]\n",
+        "# print(TO_LANGUAGE_CODE)\n",
         "\n",
         "\n",
         "langs_to_iso = {\n",
@@ -6531,11 +6445,9 @@
         "    \"zh\": \"chi\",\n",
         "}\n",
         "\n",
-        "\n",
         "whisper_langs = sorted(LANGUAGES.keys()) + sorted(\n",
         "    [k.title() for k in TO_LANGUAGE_CODE.keys()]\n",
         ")\n",
-        "\n",
         "\n",
         "def create_config(output_dir):\n",
         "    DOMAIN_TYPE = \"telephonic\"  # Can be meeting, telephonic, or general based on domain type of the audio file.\n",
@@ -6588,14 +6500,12 @@
         "\n",
         "    return config\n",
         "\n",
-        "\n",
         "def get_word_ts_anchor(s, e, option=\"start\"):\n",
         "    if option == \"end\":\n",
         "        return e\n",
         "    elif option == \"mid\":\n",
         "        return (s + e) / 2\n",
         "    return s\n",
-        "\n",
         "\n",
         "def get_words_speaker_mapping(wrd_ts, spk_ts, word_anchor_option=\"start\"):\n",
         "    s, e, sp = spk_ts[0]\n",
@@ -6619,9 +6529,7 @@
         "        )\n",
         "    return wrd_spk_mapping\n",
         "\n",
-        "\n",
         "sentence_ending_punctuations = \".?!\"\n",
-        "\n",
         "\n",
         "def get_first_word_idx_of_sentence(word_idx, word_list, speaker_list, max_words):\n",
         "    is_word_sentence_end = (\n",
@@ -6637,7 +6545,6 @@
         "        left_idx -= 1\n",
         "\n",
         "    return left_idx if left_idx == 0 or is_word_sentence_end(left_idx - 1) else -1\n",
-        "\n",
         "\n",
         "def get_last_word_idx_of_sentence(word_idx, word_list, max_words):\n",
         "    is_word_sentence_end = (\n",
@@ -6656,7 +6563,6 @@
         "        if right_idx == len(word_list) - 1 or is_word_sentence_end(right_idx)\n",
         "        else -1\n",
         "    )\n",
-        "\n",
         "\n",
         "def get_realigned_ws_mapping_with_punctuation(\n",
         "    word_speaker_mapping, max_words_in_sentence=50):\n",
@@ -6716,7 +6622,6 @@
         "\n",
         "    return realigned_list\n",
         "\n",
-        "\n",
         "def get_sentences_speaker_mapping(word_speaker_mapping, spk_ts):\n",
         "    sentence_checker = nltk.tokenize.PunktSentenceTokenizer().text_contains_sentbreak\n",
         "    s, e, spk = spk_ts[0]\n",
@@ -6744,7 +6649,6 @@
         "    snts.append(snt)\n",
         "    return snts\n",
         "\n",
-        "\n",
         "def get_speaker_aware_transcript(sentences_speaker_mapping, f):\n",
         "    previous_speaker = sentences_speaker_mapping[0][\"speaker\"]\n",
         "    f.write(f\"{previous_speaker}: \")\n",
@@ -6760,7 +6664,6 @@
         "\n",
         "        # No matter what, write the current sentence\n",
         "        f.write(sentence + \" \")\n",
-        "\n",
         "\n",
         "def format_timestamp(\n",
         "    milliseconds: float, always_include_hours: bool = False, decimal_marker: str = \".\"):\n",
@@ -6780,7 +6683,6 @@
         "        f\"{hours_marker}{minutes:02d}:{seconds:02d}{decimal_marker}{milliseconds:03d}\"\n",
         "    )\n",
         "\n",
-        "\n",
         "def write_srt(transcript, file):\n",
         "    \"\"\"\n",
         "        Write a transcript to a file in SRT format.\n",
@@ -6796,7 +6698,6 @@
         "            flush=True,\n",
         "        )\n",
         "\n",
-        "\n",
         "def find_numeral_symbol_tokens(tokenizer):\n",
         "    numeral_symbol_tokens = [\n",
         "        -1,\n",
@@ -6806,7 +6707,6 @@
         "        if has_numeral_symbol:\n",
         "            numeral_symbol_tokens.append(token_id)\n",
         "    return numeral_symbol_tokens\n",
-        "\n",
         "\n",
         "def _get_next_start_timestamp(word_timestamps, current_word_index, final_timestamp):\n",
         "    # if current word is the last word\n",
@@ -6829,7 +6729,6 @@
         "\n",
         "        else:\n",
         "            return word_timestamps[next_word_index][\"start\"]\n",
-        "\n",
         "\n",
         "def filter_missing_timestamps(\n",
         "    word_timestamps, initial_timestamp=0, final_timestamp=None):\n",
@@ -6857,7 +6756,6 @@
         "            result.append(ws)\n",
         "    return result\n",
         "\n",
-        "\n",
         "def cleanup(path: str):\n",
         "    \"\"\"path could either be relative or absolute.\"\"\"\n",
         "    # check if file or directory exists\n",
@@ -6869,7 +6767,6 @@
         "        shutil.rmtree(path)\n",
         "    else:\n",
         "        raise ValueError(\"Path {} is not a file or dir.\".format(path))\n",
-        "\n",
         "\n",
         "def process_language_arg(language: str, model_name: str):\n",
         "    \"\"\"\n",
