changes in the notebook

--- a/examples/fintech-ai-agent/fintech-ai-agent.ipynb
+++ b/examples/fintech-ai-agent/fintech-ai-agent.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fintech AI Agent\n",
+    "\n",
+    "These days, there are tons of frameworks out there to help you whip up AI agents fast. Honestly, it feels like a new “low-code” tool shows up every other day, promising to make building agents a breeze. They’re all over the place—simple drag-and-drop setups or text boxes where you plug in a few prompts and some data, and just like that, your agent’s ready to go.\n",
+    "\n",
+    "This time, we will go all in to create a fintech AI agent with no framework, everything is in raw python. This notebook carries an imporant appication of the fintech industry where people face enormus amount of time in processsing loan queries and insurance claims."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
@@ -85,11 +96,9 @@
     "id": "F5R6vGuqqIaw"
    },
    "source": [
-    "### LLM and Embedding model Customization\n",
+    "### LLM and Embedding Model Customization\n",
     "\n",
-    "- I have used Mistral for the LLM operations, you can easily switch to any provider and any kind of Model which you think might be best for your use case.\n",
-    "- Same goes for the Embedding model.\n",
-    "- Don't forget to add your `huggingface token` and `mistral api key` if you are going with the same setup"
+    "For the language model operations, I’ve implemented Mistral as the foundation, delivering reliable and efficient performance tailored to various tasks. However, the setup is highly flexible—you can seamlessly switch to any other provider or model that better suits your specific needs, ensuring adaptability for your unique use case. The same level of customization applies to the embedding model, allowing you to choose an alternative that aligns perfectly with your project requirements. If you decide to stick with this configuration, just remember to include your `Hugging Face token` and `Mistral API key` to authenticate and unlock the full potential of the system without any hiccups.\n"
    ]
   },
   {
@@ -147,6 +156,15 @@
     "\n",
     "# Connect to LanceDB\n",
     "db = lancedb.connect('./lancedb_data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predictive ML Modelling\n",
+    "\n",
+    "I’m using the [Credit Risk Dataset](https://www.kaggle.com/datasets/laotse/credit-risk-dataset) as a demo for loans. In reality, companies could use something like a CIBIL score to see if someone’s eligible. But for this POC, I grabbed that dataset, trained a random forest model, and used it for predictive analysis."
    ]
   },
   {
@@ -679,8 +697,7 @@
    "source": [
     "### Setting up the Kernel Agent\n",
     "\n",
-    "- Kernel Agent is responsible for understanding and making the necessary steps to route the queries to the relevant agent (i.e loan agent or the insurance agent).\n",
-    "- It uses the relevant information provided from the user (params) as well as the intent for it."
+    "The Kernel Agent serves as the intelligent core of the system, designed to comprehend user queries and determine the appropriate actions to direct them to the correct agent—be it the loan agent or the insurance agent—ensuring a smooth and efficient process. It leverages key details provided by the user, such as parameters, along with the detected intent behind the query, to make informed decisions and route requests accurately to the most relevant agent for resolution."
    ]
   },
   {
@@ -875,6 +892,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before diving in, I want to walk you through my thought process for creating the Insurance Agent. Picture this: you walk into an insurance company, sit down with someone, and start explaining why you need to file a claim—why it’s legit and why you deserve it. That conversation is key because it’s the starting point for deciding whether the claim gets processed or not.\n",
+    "\n",
+    "I tried hunting down a dataset with those kinds of conversations and clear yes or no labels for claims, but I came up empty. So, to keep things moving, I built a simple synthetic dataset pipeline. It generates a fake dataset with text queries on one side and a target on the other—showing if the person filing the claim is eligible or not."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
@@ -1014,10 +1040,11 @@
     "id": "b5H2QIATlbCw"
    },
    "source": [
-    "### Inserting the demo insurance queries to the lancedb\n",
+    "### Inserting Demo Insurance Queries into LanceDB\n",
     "\n",
-    "- Insurance queries will be utilized later on to perform the semantic search for the existing queries\n",
-    "- New query will be embed again to utilize the hybrid search for the existing database"
+    "The demo insurance queries are added to LanceDB to serve as a foundation for future operations, enabling semantic search capabilities across the existing query dataset. When a new query is introduced, it will be embedded once more, allowing the system to leverage hybrid search techniques to effectively explore and match it against the pre-existing database, ensuring accurate and efficient retrieval of relevant information.\n",
+    "\n",
+    "This can become a go-to for the fintech comapaines where they can plug in their own Insurance Conversations logs and do the semantic search on the new embeded queries to retrive the eligibility for the claim."
    ]
   },
   {
@@ -1087,6 +1114,13 @@
     "\n",
     "    def process(self, query):\n",
     "        return self.tools[0].use(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Puttting it all together!"
    ]
   },
   {
