--- a/examples/fintech-ai-agent/fintech-ai-agent.ipynb
+++ b/examples/fintech-ai-agent/fintech-ai-agent.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "### Fintech AI Agent\n",
     "\n",
+    "![fintech-ai-agent](https://github.com/lancedb/vectordb-recipes/blob/main/examples/fintech-ai-agent/fintech%20ai%20agent.png?raw=1)\n",
+    "\n",
+    "\n",
     "These days, there are tons of frameworks out there to help you whip up AI agents fast. Honestly, it feels like a new “low-code” tool shows up every other day, promising to make building agents a breeze. They’re all over the place—simple drag-and-drop setups or text boxes where you plug in a few prompts and some data, and just like that, your agent’s ready to go.\n",
     "\n",
     "This time, we will go all in to create a fintech AI agent with no framework, everything is in raw python. This notebook carries an imporant appication of the fintech industry where people face enormus amount of time in processsing loan queries and insurance claims."
