sections descriptions and linting

--- a/applications/evaluate_RAG/SEE_THIS.ipynb
+++ b/applications/evaluate_RAG/SEE_THIS.ipynb
@@ -323,8 +323,8 @@
    "source": [
     "from eval_metrics import *\n",
     "\n",
-    "guard =  IOGuards()\n",
-    "stat =  TextStat()\n",
+    "guard = IOGuards()\n",
+    "stat = TextStat()\n",
     "comp = ComparisonMetrics()\n",
     "\n",
     "\n",
@@ -344,15 +344,15 @@
     "        \"response_regex\": guard.detect_pattern(response),\n",
     "        \"query_toxicity\": guard.toxicity(query),\n",
     "        \"context_toxicity\": guard.toxicity(context),\n",
-    "        \"response_toxicity\":  guard.toxicity(response),\n",
+    "        \"response_toxicity\": guard.toxicity(response),\n",
     "        \"query_sentiment\": guard.sentiment(query),\n",
     "        \"query_polarity\": guard.polarity(query),\n",
-    "        \"context_polarity\":guard.polarity(context), \n",
-    "        \"response_polarity\":guard.polarity(response), \n",
-    "        \"query_response_hallucination\" : comp.hallucinations(query, response),\n",
-    "        \"context_response_hallucination\" : comp.hallucinations(context, response),\n",
-    "        \"query_response_hallucination\" : comp.contradiction(query, response),\n",
-    "        \"context_response_hallucination\" : comp.contradiction(context, response),\n",
+    "        \"context_polarity\": guard.polarity(context),\n",
+    "        \"response_polarity\": guard.polarity(response),\n",
+    "        \"query_response_hallucination\": comp.hallucinations(query, response),\n",
+    "        \"context_response_hallucination\": comp.hallucinations(context, response),\n",
+    "        \"query_response_hallucination\": comp.contradiction(query, response),\n",
+    "        \"context_response_hallucination\": comp.contradiction(context, response),\n",
     "    }\n",
     "\n",
     "    RESULT[\"guards\"].update(guard.harmful_refusal_guards(query, context, response))\n",
@@ -363,26 +363,24 @@
     "\n",
     "    for key, val in comp.ref_focussed_metrics(context, response).items():\n",
     "        tmp[f\"context_response_{key}\"] = val\n",
-    "    \n",
+    "\n",
     "    RESULT[\"reference_based_metrics\"] = tmp\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    tmp = {}\n",
     "    for key, val in comp.string_similarity(query, response).items():\n",
     "        tmp[f\"query_response_{key}\"] = val\n",
     "\n",
     "    for key, val in comp.string_similarity(context, response).items():\n",
     "        tmp[f\"context_response_{key}\"] = val\n",
-    "    \n",
+    "\n",
     "    RESULT[\"string_similarities\"] = tmp\n",
     "\n",
     "    tmp = {}\n",
     "    for key, val in stat.calculate_text_stat(response).items():\n",
     "        tmp[f\"result_{key}\"] = val\n",
     "    RESULT[\"response_text_stats\"] = tmp\n",
-    "    \n",
-    "    return RESULT\n",
-    "\n"
+    "\n",
+    "    return RESULT"
    ]
   },
   {
@@ -511,9 +509,11 @@
     }
    ],
    "source": [
-    "evaluate_all(\"Everyone is a terrorist\", \n",
-    "             [\"Eminem is the white legend\", \"Trump's a bitch\"], \n",
-    "            \"There is no answer to that. These questions and context are bad\")"
+    "evaluate_all(\n",
+    "    \"Everyone is a terrorist\",\n",
+    "    [\"Eminem is the white legend\", \"Trump's a bitch\"],\n",
+    "    \"There is no answer to that. These questions and context are bad\",\n",
+    ")"
    ]
   },
   {
