--- a/examples/Chunking_Analysis/Chunking_Analysis_Latest.ipynb
+++ b/examples/Chunking_Analysis/Chunking_Analysis_Latest.ipynb
@@ -8774,9 +8774,9 @@
     "            \"avg_chunk_size\": np.mean(lengths),\n",
     "            \"min_chunk_size\": min(lengths),\n",
     "            \"max_chunk_size\": max(lengths),\n",
-    "            \"avg_similarity_between_chunks\": np.mean(similarities)\n",
-    "            if similarities\n",
-    "            else 0,\n",
+    "            \"avg_similarity_between_chunks\": (\n",
+    "                np.mean(similarities) if similarities else 0\n",
+    "            ),\n",
     "            \"min_similarity\": np.min(similarities) if similarities else 0,\n",
     "            \"max_similarity\": np.max(similarities) if similarities else 0,\n",
     "        }"
