--- a/examples/saas_examples/python_notebook/LangChain_and_Autogen.ipynb
+++ b/examples/saas_examples/python_notebook/LangChain_and_Autogen.ipynb
@@ -6,7 +6,7 @@
         "id": "13cb272e"
       },
       "source": [
-        "# 🧠 Multi-Agent QA System with with RAG and Multi-Agent Collaboration\n",
+        "# 🧠 Multi-Agent QA System with RAG and Multi-Agent Collaboration\n",
         "\n",
         "This notebook demonstrates an end-to-end question answering system that combines retrieval-augmented generation (RAG) with multi-agent collaboration to achieve accurate, context-aware answers. Built on the [SQuAD v2](https://huggingface.co/datasets/rajpurkar/squad_v2) benchmark, The implementation uses  the following key components:\n",
         "\n",
