--- a/examples/saas_examples/python_notebook/Hybrid_search.ipynb
+++ b/examples/saas_examples/python_notebook/Hybrid_search.ipynb
@@ -8,6 +8,8 @@
       "source": [
         "# 🔍 Hybrid Search with LanceDB Cloud\n",
         "\n",
+        "*If you haven’t signed up for LanceDB Cloud yet, click [here](https://noteforms.com/forms/lancedb-mailing-list-cloud-kty1o5?notionforms=1) to get started!*\n",
+        "\n",
         "This notebook demonstrates how to implement **hybrid search** using LanceDB Cloud, combining the power of vector embeddings and full-text search with custom business logic. Designed for real-world search applications, this example leverages:\n",
         "\n",
         "- **OpenAI Embeddings** for semantic understanding\n",
