correct lancedb cloud link

--- a/examples/saas_examples/python_notebook/LanceDB_Cloud_quickstart.ipynb
+++ b/examples/saas_examples/python_notebook/LanceDB_Cloud_quickstart.ipynb
@@ -8,9 +8,10 @@
       "source": [
         "# Quickstart with LanceDB Cloud\n",
         "\n",
-        "*If you haven’t signed up for LanceDB Cloud yet, click [here](https://noteforms.com/forms/lancedb-mailing-list-cloud-kty1o5?notionforms=1) to get started!*\n",
+        "🚀 **_If you haven’t signed up for LanceDB Cloud yet, click [here](https://cloud.lancedb.com) to get started_!**\n",
         "\n",
-        "Welcome to LanceDB Cloud!\n",
+        "\n",
+        "## Welcome to LanceDB Cloud!\n",
         "\n",
         "In this notebook, we show how to implement efficient semantic search using LanceDB Cloud. You'll learn how to:\n",
         "\n",
