--- a/examples/saas_examples/python_notebook/Hybrid_search.ipynb
+++ b/examples/saas_examples/python_notebook/Hybrid_search.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# 🔍 Hybrid Search with LanceDB Cloud\n",
         "\n",
-        "🚀 **_If you haven’t signed up for LanceDB Cloud yet, click [here](https://cloud.lancedb.com) to get started_!**\n",
+        "🚀 **_If you haven’t signed up for LanceDB Cloud yet, click [here](https://cloud.lancedb.com) to get started!_**\n",
         "\n",
         "This notebook demonstrates how to implement **hybrid search** using LanceDB Cloud, combining the power of vector embeddings and full-text search with custom business logic. Designed for real-world search applications, this example leverages:\n",
         "\n",
