--- a/examples/saas_examples/python_notebook/LanceDB_Cloud_quickstart.ipynb
+++ b/examples/saas_examples/python_notebook/LanceDB_Cloud_quickstart.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Quickstart with LanceDB Cloud\n",
         "\n",
-        "🚀 **_If you haven’t signed up for LanceDB Cloud yet, click [here](https://cloud.lancedb.com) to get started_!**\n",
+        "🚀 **_If you haven’t signed up for LanceDB Cloud yet, click [here](https://cloud.lancedb.com) to get started!_**\n",
         "\n",
         "\n",
         "## Welcome to LanceDB Cloud!\n",
